feat: FV-55  - Closing queries in the "finally" try catch's block  - changing Boolean and Integers to the primitives boolean and int  - Applying rollbacks when an error is thrown  - Length's reduction of lines that were too long  - Changing usage of color codes "§" by ChatColor